@@ -6104,6 +6104,39 @@ PRE(sys_ioctl)
    case VKI_SNDRV_PCM_IOCTL_LINK:
       /* these just take an int by value */
       break;
+   case VKI_SNDRV_CTL_IOCTL_PVERSION:
+      PRE_MEM_WRITE( "ioctl(SNDRV_CTL_IOCTL_PVERSION)", (Addr)ARG3, sizeof(int) );
+      break;
+   case VKI_SNDRV_CTL_IOCTL_CARD_INFO:
+      PRE_MEM_WRITE( "ioctl(SNDRV_CTL_IOCTL_CARD_INFO)", (Addr)ARG3, sizeof(struct vki_snd_ctl_card_info) );
+      break;
+   case VKI_SNDRV_CTL_IOCTL_ELEM_LIST: {
+      struct vki_snd_ctl_elem_list *data = (struct vki_snd_ctl_elem_list *)ARG3;
+      PRE_MEM_READ( "ioctl(SNDRV_CTL_IOCTL_ELEM_LIST)", (Addr)&data->offset, sizeof(data->offset) );
+      PRE_MEM_READ( "ioctl(SNDRV_CTL_IOCTL_ELEM_LIST)", (Addr)&data->space, sizeof(data->space) );
+      PRE_MEM_WRITE( "ioctl(SNDRV_CTL_IOCTL_ELEM_LIST)", (Addr)&data->used, sizeof(data->used) );
+      PRE_MEM_WRITE( "ioctl(SNDRV_CTL_IOCTL_ELEM_LIST)", (Addr)&data->count, sizeof(data->count) );
+      PRE_MEM_READ( "ioctl(SNDRV_CTL_IOCTL_ELEM_LIST)", (Addr)&data->pids, sizeof(data->pids) );
+      if (data->pids) {
+         PRE_MEM_WRITE( "ioctl(SNDRV_CTL_IOCTL_ELEM_LIST)", (Addr)data->pids, sizeof(struct vki_snd_ctl_elem_id) * data->space );
+      }
+      break;
+   }
+   case VKI_SNDRV_CTL_IOCTL_TLV_READ: {
+      struct vki_snd_ctl_tlv *data = (struct vki_snd_ctl_tlv *)ARG3;
+      PRE_MEM_READ( "ioctl(SNDRV_CTL_IOCTL_TLV_READ)", (Addr)&data->numid, sizeof(data->numid) );
+      PRE_MEM_READ( "ioctl(SNDRV_CTL_IOCTL_TLV_READ)", (Addr)&data->length, sizeof(data->length) );
+      PRE_MEM_WRITE( "ioctl(SNDRV_CTL_IOCTL_TLV_READ)", (Addr)data->tlv, data->length );
+      break;
+   }
+   case VKI_SNDRV_CTL_IOCTL_TLV_WRITE:
+   case VKI_SNDRV_CTL_IOCTL_TLV_COMMAND: {
+      struct vki_snd_ctl_tlv *data = (struct vki_snd_ctl_tlv *)ARG3;
+      PRE_MEM_READ( "ioctl(SNDRV_CTL_IOCTL_TLV_WRITE)", (Addr)&data->numid, sizeof(data->numid) );
+      PRE_MEM_READ( "ioctl(SNDRV_CTL_IOCTL_TLV_WRITE)", (Addr)&data->length, sizeof(data->length) );
+      PRE_MEM_READ( "ioctl(SNDRV_CTL_IOCTL_TLV_WRITE)", (Addr)data->tlv, data->length );
+      break;
+   }
 
       /* Real Time Clock (/dev/rtc) ioctls */
    case VKI_RTC_UIE_ON:
@@ -7449,6 +7482,30 @@ POST(sys_ioctl)
    case VKI_SNDRV_TIMER_IOCTL_STOP:
    case VKI_SNDRV_TIMER_IOCTL_CONTINUE:
    case VKI_SNDRV_TIMER_IOCTL_PAUSE:
+   case VKI_SNDRV_CTL_IOCTL_PVERSION: {
+      POST_MEM_WRITE( (Addr)ARG3, sizeof(int) );
+      break;
+   }
+   case VKI_SNDRV_CTL_IOCTL_CARD_INFO:
+      POST_MEM_WRITE( (Addr)ARG3, sizeof(struct vki_snd_ctl_card_info) );
+      break;
+   case VKI_SNDRV_CTL_IOCTL_ELEM_LIST: {
+      struct vki_snd_ctl_elem_list *data = (struct vki_snd_ctl_elem_list *)ARG3;
+      POST_MEM_WRITE( (Addr)&data->used, sizeof(data->used) );
+      POST_MEM_WRITE( (Addr)&data->count, sizeof(data->count) );
+      if (data->pids) {
+         POST_MEM_WRITE( (Addr)data->pids, sizeof(struct vki_snd_ctl_elem_id) * data->used );
+      }
+      break;
+   }
+   case VKI_SNDRV_CTL_IOCTL_TLV_READ: {
+      struct vki_snd_ctl_tlv *data = (struct vki_snd_ctl_tlv *)ARG3;
+      POST_MEM_WRITE( (Addr)data->tlv, data->length );
+      break;
+   }
+   case VKI_SNDRV_CTL_IOCTL_TLV_WRITE:
+   case VKI_SNDRV_CTL_IOCTL_TLV_COMMAND:
+      break;
 
       /* SCSI no operand */
    case VKI_SCSI_IOCTL_DOORLOCK:
